@@ -1,3 +1,5 @@
+[B]Version 0.0.9[/B]
+- Stream lookup fix / Ülekande leidmise parandus
 [B]Version 0.0.8[/B]
 - Stream ID lookup fix / Ülekande id leidmise parandus
 [B]Version 0.0.7[/B]
